create order and refactor
