# app/Http/Controllers/OrderController.php
@@ -4,6 +4,8 @@ namespace App\Http\Controllers;
 
 use App\Models\Order;
 use App\Models\Product;
+use Carbon\Carbon;
+use Exception;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Log;
@@ -71,10 +73,7 @@ class OrderController extends Controller
      *   @OA\Response(
      *     response=404,
      *     description="Order not found",
-     *     @OA\JsonContent(
-     *       type="object",
-     *       @OA\Property(property="error", type="string", example="Record not found")
-     *     )
+     *     @OA\JsonContent(ref="#/components/schemas/NotFoundError")
      *   )
      * )
      */
@@ -83,6 +82,116 @@ class OrderController extends Controller
         $order->load(['products']);
         
         return response()->json($order);
+    }
+
+    public function store(Request $request): JsonResponse
+    {
+        $validated = $request->validate([
+            'name' => 'required|max:255',
+            'description' => 'required',
+            'products' => 'required|array',
+            'products.*.id' => 'exists:products,id',
+        ]);
+
+        try {
+            $order = Order::create([
+                'name' => $validated['name'],
+                'description' => $validated['description'],
+                'date' => Carbon::now(),
+            ]);
+
+            $order->products()->attach(
+                array_map(function($el) {
+                    return $el['id'];
+                }, $validated['products'])
+            );
+
+            return response()->json([
+                'message' => 'Order created successfully',
+                'order' => $order,
+            ], 201);
+        }
+        catch (Exception $exception) {
+            Log::critical('Unexpected error during order creation', [
+                'exception' => $exception->getMessage(),
+                'trace' => $exception->getTraceAsString(),
+            ]);
+            return response()->json([
+                'error' => 'An error occured',
+            ], 500);
+        }
+    }
+
+     /**
+     * @OA\Put(
+     *     path="/orders/{order}",
+     *     summary="Update order",
+     *     tags={"Orders"},
+     *     @OA\Parameter(
+     *         name="order",
+     *         in="path",
+     *         description="Order ID",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="New name", maxLength=255),
+     *             @OA\Property(property="description", type="string", example="New description")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Order updated successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Order updated")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *       response=404,
+     *       description="Order not found",
+     *       @OA\JsonContent(ref="#/components/schemas/NotFoundError")
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="errors", type="array", @OA\Items(type="string", example="Field name is required"))
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Server error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="An error occured")
+     *         )
+     *     )
+     * )
+     */
+    public function update(Request $request, Order $order): JsonResponse
+    {
+        $validated = $request->validate([
+            'name' => 'required|max:255',
+            'description' => 'required',
+        ]);
+
+        try {
+            $order->update($validated);
+            return response()->json([
+                'message' => 'Order updated',
+            ]);
+        } catch (\Exception $e) {
+            Log::critical('Unexpected error during order update.', [
+                'exception' => $e->getMessage(),
+                'trace' => $e->getTraceAsString(),
+            ]);
+            return response()->json([
+                'error' => 'An error occured',
+            ], 500);
+        }
     }
 
     /**
@@ -104,10 +213,7 @@ class OrderController extends Controller
      *   @OA\Response(
      *     response=404,
      *     description="Order not found",
-     *     @OA\JsonContent(
-     *       type="object",
-     *       @OA\Property(property="error", type="string", example="Record not found")
-     *     )
+     *     @OA\JsonContent(ref="#/components/schemas/NotFoundError")
      *   )
      * )
      */
@@ -148,10 +254,7 @@ class OrderController extends Controller
      *   @OA\Response(
      *     response=404,
      *     description="Order or product not found",
-     *     @OA\JsonContent(
-     *       type="object",
-     *       @OA\Property(property="error", type="string", example="Record not found")
-     *     )
+     *     @OA\JsonContent(ref="#/components/schemas/NotFoundError")
      *   ),
      *   @OA\Response(
      *     response=400,
@@ -208,10 +311,7 @@ class OrderController extends Controller
      *   @OA\Response(
      *     response=404,
      *     description="Order or product not found",
-     *     @OA\JsonContent(
-     *       type="object",
-     *       @OA\Property(property="error", type="string", example="Record not found")
-     *     )
+     *     @OA\JsonContent(ref="#/components/schemas/NotFoundError")
      *   ),
      *   @OA\Response(
      *     response=400,
@@ -235,28 +335,5 @@ class OrderController extends Controller
         return response()->json([
             'message' => 'Product removed successfully'
         ]);
-    }
-
-    public function update(Request $request, Order $order): JsonResponse
-    {
-        $validated = $request->validate([
-            'name' => 'required|max:255',
-            'description' => 'required',
-        ]);
-
-        try {
-            $order->update($validated);
-            return response()->json([
-                'message' => 'Order updated',
-            ]);
-        } catch (\Exception $e) {
-            Log::critical('Unexpected error during order update.', [
-                'exception' => $e->getMessage(),
-                'trace' => $e->getTraceAsString(),
-            ]);
-            return response()->json([
-                'error' => 'An error occured',
-            ], 500);
-        }
     }
 }
